# template_python

./: README.md  run_setup.sh  setup.cfg
scripts/: duplicate_this.sh
