[metadata]
name = PROJECT_NAME
version = 0.1.0
description = A simple Python project template
author = Your Name
author_email = your.email@example.com

[options]
packages = find:
packages_dir =
    = src
install_requires =
    numpy >= 1.18.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    isort
    flake8
    mypy
    pytest
    pytest-cov

[options.package_data]
* = *.cfg
    *.json